# SRSLYumi

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: pythonpackage.yml
srslyumi/: bamtag.py  cli.py
srslyumi/tests/: .gitignore  RunInfo-input02-bad-no-reads.xml  RunInfo-input03-bad-single-index.xml  RunInfo-input04-bad-no-umi-cycles.xml  RunInfo-input05-bad-r2notindex.xml  RunInfo-input06-bad-shorti5.xml  RunInfo-input07-bad-r3notindex.xml  RunInfo-output01-good.xml  SampleSheet-input01-good.csv  SampleSheet-input02-good-no-blanks.csv  SampleSheet-input03-bad-no-samples.csv  SampleSheet-input04-bad-nodataheader.csv  SampleSheet-input05-bad-nodatasection.csv  SampleSheet-input06-noindex2.csv  SampleSheet-input07-longadapters.csv  SampleSheet-input08-shortadapters.csv  SampleSheet-input09-bad-fourreads.csv  SampleSheet-output01-good.csv  bamtag-in-01.sam  bamtag-in-02.sam  bamtag-in-03.sam  bamtag-out-01.bam  bamtag-out-01.sam  bamtag-out-03.sam  bcl2fastq  mv  test_bamtag.py  test_cli.py
srslyumi/tests/TestInput/: RunInfo.xml
testdata/: RunInfo.xml  SampleSheet.csv
testdata/Data/Intensities/: RTAConfiguration.xml  config.xml
testdata/Data/RTALogs/: 241121-050719_Log_00.txt  241121-050719_Read1_Copy Thread_00.txt  241121-050719_Read1_Delete Thread_00.txt  241121-050719_Read1_Processor #1_00.txt  241121-050719_Read1_Processor #2_00.txt  241121-050719_Read1_Sync Thread_00.txt  241121-092514_Log_00.txt  241121-092514_Read2_Copy Thread_00.txt  241121-092514_Read2_Delete Thread_00.txt  241121-092514_Read2_Processor #1_00.txt  DiagLog.txt  (+14 more)
(+732 files in other folders)
